<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TableRow
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/ticker_item_name_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16dp"
                android:text="@string/ticker_item_name_string" />

            <TextView
                android:id="@+id/ticer_item_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/current_buy_price_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16dp"
                android:text="@string/current_buy_price_string" />

            <TextView
                android:id="@+id/current_buy_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/current_sell_price_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16dp"
                android:text="@string/current_sell_price_string" />

            <TextView
                android:id="@+id/current_sell_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/highest_price_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16dp"
                android:text="@string/highest_price_string" />

            <TextView
                android:id="@+id/highest_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lowest_price_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16dp"
                android:text="@string/lowest_price_string" />

            <TextView
                android:id="@+id/lowest_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/volume_trade_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16dp"
                android:text="@string/volume_trade_string" />

            <TextView
                android:id="@+id/volume_trade_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/exmo_fetching_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#56789a"
        android:gravity="center"
        android:padding="4dp"
        android:text="Show chart"
        android:textColor="#fff" />


</LinearLayout>